--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -96,3 +96,31 @@ body {
 .calendar-day.Sunday div:first-child {
     grid-column: 7;
 }
+
+.modal .overlay {
+    background: black;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 50%;
+    cursor: pointer;
+}
+
+
+
+.modal.show {
+    display: block;
+    position: fixed;
+
+}
+
+.modal-content {
+    display: flex;
+    height: 500px;
+    top: 150px;
+    background: url("../img/bg-card.jpg") no-repeat center ;
+}
+
+
